--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="description" content="Просветительский сайт о шведской модели борбы с проституцией посредством криминализации клиента">
     <title>Nordic model</title>
         <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,700&amp;subset=cyrillic">
-        <link rel="stylesheet" href="css/normalize.css">
         <link  rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
     <div class="container">
         <h1 class="page-title">nordicmodel.in.ua</h1>
         <p>Сайт в разработке</p>
-        <p class="contacts">Свяжитесь с нами на <a href="https://www.facebook.com/groups/femuanordicmodel">Facebook</a></p>
+        <p class="contacts">Пишите нам на <a href="mailto:feminism@nordicmodel.in.ua">feminism@nordicmodel.in.ua</a><br>или свяжитесь с нами на <a href="https://www.facebook.com/groups/femuanordicmodel">Facebook</a></p>
     </div>
 </body>
 </html>
