--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Ця спільнота створена задля протидії легалізації проституції в Україні і сприяння стратегічній меті - криміналізації клієнта (шведська модель)">
-    <title>Nordic model</title>
+    <meta name="description" content="Ресурс про протидію легалізації проституції в Україні і поширення інформації про криміналізацію клієнта (шведська модель)">
+    <title>Феміністки за Шведську модель</title>
         <link  rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
